Linked index and recipes to each other

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes
     </h1>
+    <a href="recipes/sushirice.html" rel="noopener noreferrer">Sushi rice!</a>
 </body>
 </html>
