Added image for sushi rice

--- a/recipes/sushirice.html
+++ b/recipes/sushirice.html
@@ -9,6 +9,7 @@
     <h1>
         Sushi rice
     </h1>
+    ,<img src="sushi-rice" >
     <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
