Wrote description and ingredients for sushi rice

--- a/recipes/sushirice.html
+++ b/recipes/sushirice.html
@@ -9,7 +9,19 @@
     <h1>
         Sushi rice
     </h1>
-    ,<img src="sushi-rice" >
+    <img src="sushi-rice" >
+    <h2>Description</h2>
+
+    <p>This recipe makes the perfect fluffy <strong>moist</strong> sushi rice!</p>
+
+    <ul>
+        <li>5 dl <em>sushi rice</em></li>
+        <li>1.25 dl <em>rice vine vinegar</em></li>
+        <li>0.75 dl <em>sugar</em></li>
+        <li>0.5 tbs <em>salt</em></li>
+    </ul>
+
+    
     <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
