Wrote recipe steps

--- a/recipes/sushirice.html
+++ b/recipes/sushirice.html
@@ -21,7 +21,22 @@
         <li>0.5 tbs <em>salt</em></li>
     </ul>
 
-    
+    <ol>
+        <li>Rinse the rice 5-7 times.</li>
+        <li>Let rice soak in water for 30 mins.</li>
+        <li>Pour the water away. Add new water: 1.5 times the volume of rice, for example 
+            6 dl rice -> 9 dl water.
+        </li>
+        <li>Heat up on stove until boiling.</li>
+        <li>Immediately when boiling starts, reduce to small temp and let cook for 
+            about 10 mins.
+        </li>
+        <li>While rice is cooking, add vinegar, sugar and salt into a kettle and warm up constantly
+            stirring, until sugar and salt have dissolved. Remove from heat.
+        </li>
+        <li>After 10 mins, remove the rice from heat and let stand under lid for another 10 mins.</li>
+        <li>Move to big oven form or similar, add the sauce and mix gently. Let cool (can help cooling with a fan).</li>
+    </ol>
     <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
