--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Odin Recipes
     </h1>
-    <a href="recipes/sushirice.html" rel="noopener noreferrer">Sushi rice!</a>
+    <ul>
+       <li> <a href="recipes/sushirice.html" rel="noopener noreferrer">Sushi rice!</a> </li>
+       <li> <a href="recipes/airfyer-tofu.html" rel="noopener noreferrer">Airfryer tofu!</a> </li>
+    </ul>
+    
 </body>
 </html>
