Added recipe steps for tofu

--- a/recipes/airfyer-tofu.html
+++ b/recipes/airfyer-tofu.html
@@ -10,33 +10,35 @@
         Airfryer tofu
     </h1>
 
-    <!-- <img src="tofu_airfryer.xcf" > -->
+    <img src="tofu.webp" >
     <h2>Description</h2>
 
-    <p>This recipe makes the perfect fluffy <strong>moist</strong> sushi rice!</p>
+    <p>Easy and delicious sticky tofu in the airfryer :-)</p>
 
     <ul>
-        <li>5 dl <em>sushi rice</em></li>
-        <li>1.25 dl <em>rice vine vinegar</em></li>
-        <li>0.75 dl <em>sugar</em></li>
-        <li>0.5 tbs <em>salt</em></li>
+        <li>1 package <em>firm tofu</em></li>
+        <li>3 tbs <em>sweet chili sauce</em></li>
+        <li>1 tbs <em>japanese soy sauce</em></li>
+        <li>1.5 tbs <em>roasted sesame oil</em></li>
+        <li>1 ts <em>garlic powder</em></li>
+        <li> <em>sesame seeds</em></li>
+        <li> <em>spring onion to garnish</em></li>
     </ul>
 
     <ol>
-        <li>Rinse the rice 5-7 times.</li>
-        <li>Let rice soak in water for 30 mins.</li>
-        <li>Pour the water away. Add new water: 1.5 times the volume of rice, for example 
-            6 dl rice -> 9 dl water.
+        <li>Dry the tofu block with kitchen paper.</li>
+        <li>Cut tofu into small cubes.</li>
+        <li>Cut a piece of baking paper to cover the bottom of the airfryer. 
         </li>
-        <li>Heat up on stove until boiling.</li>
-        <li>Immediately when boiling starts, reduce to small temp and let cook for 
-            about 10 mins.
+        <li>Add tofu cubes into the airfryer, cook in 180 degrees 
+            for 12 mins. Shake couple of times during cooking.</li>
+        <li>While tofu is cooking, mix soy, sesame oil, sweet chili sauce and
+            garlic powder together.
         </li>
-        <li>While rice is cooking, add vinegar, sugar and salt into a kettle and warm up constantly
-            stirring, until sugar and salt have dissolved. Remove from heat.
+        <li>After cooking, toss the tofu in the sauce and add back to the airfryer. Cook 
+            additional 2 mins.
         </li>
-        <li>After 10 mins, remove the rice from heat and let stand under lid for another 10 mins.</li>
-        <li>Move to big oven form or similar, add the sauce and mix gently. Let cool (can help cooling with a fan).</li>
+        <li>Top with sesame seeds and spring onion. Serve with sticky white rice.</li>
     </ol>
     <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
