Added tofu image. Resized images

--- a/recipes/airfyer-tofu.html
+++ b/recipes/airfyer-tofu.html
@@ -10,7 +10,7 @@
         Airfryer tofu
     </h1>
 
-    <img src="tofu.webp" >
+    <img src="tofu.webp" height="400" width="450">
     <h2>Description</h2>
 
     <p>Easy and delicious sticky tofu in the airfryer :-)</p>
