--- a/recipes/sushirice.html
+++ b/recipes/sushirice.html
@@ -9,7 +9,7 @@
     <h1>
         Sushi rice
     </h1>
-    <img src="sushi-rice" >
+    <img src="sushi-rice" height="400" width="500" >
     <h2>Description</h2>
 
     <p>This recipe makes the perfect fluffy <strong>moist</strong> sushi rice!</p>
